--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,14 +3,20 @@
 <head>
     <base href="./" />
 
-    <title>{{page.title}} | GitarrenunterrichtInEimsbuettel</title>
+    <title>{{page.title}}</title>
 
     <meta charset="utf-8">
     <meta http-equiv="language" content="de">
-    <meta name="Description" content="{{page.content_description}}">
+    <meta name="description" content="{{page.content_description}}">
     <meta name="robots" content="{{page.robot_tags}}">
     <meta name="keywords" content="{{page.meta_keywords}}">
     <meta name="author" content="{{page.meta_author}}">
+    <meta name="audience" content="all">
+    <meta name="publisher" content="Bernhard Welling">
+    <meta name="copyright" content="Bernhard Welling">
+    <meta name="page-topic" content="Gitarre in Hamburg">
+    <meta name="page-type" content="gitarrenunterricht, gitarrenlehrer, eimsbüttel, hamburg">
+    <meta name="revisit-after" content="1 days">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
     <link rel="shortcut icon" href="assets/icon.ico" />
