--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,12 +14,13 @@
     <meta name="audience" content="all">
     <meta name="publisher" content="Bernhard Welling">
     <meta name="copyright" content="Bernhard Welling">
-    <meta name="page-topic" content="Gitarre in Hamburg">
+    <meta name="page-topic" content="Gitarreunterricht in Hamburg">
     <meta name="page-type" content="gitarrenunterricht, gitarrenlehrer, eimsbüttel, hamburg">
     <meta name="revisit-after" content="1 days">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-
+    
     <link rel="shortcut icon" href="assets/icon.ico" />
+    <link rel=“canonical“ href=“https://www.gitarrenunterrichtineimsbuettel.de/“ />
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="css/normalize.css" />
@@ -32,8 +33,24 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.2/photoswipe.min.css" integrity="sha256-rlldBDOCxqXAE1fRopHG2SqpgWisq17/3Oleo+1CBKo=" crossorigin="anonymous" />
 
     <link rel="stylesheet" href="css/style.css" />
-
-
+    
+    <!-- Matomo -->
+    <script type="text/javascript">
+        var _paq = window._paq || [];
+        /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+        /* _paq.push(['disableCookies']); */
+        _paq.push(['trackPageView']);
+        _paq.push(["enableHeartBeatTimer",5]);
+        _paq.push(['enableLinkTracking']);
+        (function() {
+        var u="//www.gitarrenunterrichtineimsbuettel.de/Analytics/";
+        _paq.push(['setTrackerUrl', u+'matomo.php']);
+        _paq.push(['setSiteId', '1']);
+            var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+        g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
+        })();
+    </script>
+    <!-- End Matomo Code -->
     
 </head>
 
