--- a/_includes/gitarrenunterricht.html
+++ b/_includes/gitarrenunterricht.html
@@ -9,17 +9,17 @@
         <div class="col-md-4">
             <img class="previewIcon" src="assets/images/schwerpunkte/spanish-guitar.svg">
             <div><h3>Klassische Gitarre</h3></div>
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modal_klassischeGitarre">Mehr erfahren</button>
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modal_klassischeGitarre" onclick="_paq.push(['trackEvent', 'Modal', 'Klassische Gitarre']);">Mehr erfahren</button>
         </div>
         <div class="col-md-4">
             <img class="previewIcon" src="assets/images/schwerpunkte/hand.svg">
             <div><h3>Fingerstyle</h3></div>
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modal_fingerstyle">Mehr erfahren</button>
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modal_fingerstyle" onclick="_paq.push(['trackEvent', 'Modal', 'Fingerstyle']);">Mehr erfahren</button>
         </div>
         <div class="col-md-4">
             <img class="previewIcon" src="assets/images/schwerpunkte/song.svg">
             <div><h3>Liedbegleitung</h3></div>
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modal_liedbegleitung">Mehr erfahren</button>
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modal_liedbegleitung" onclick="_paq.push(['trackEvent', 'Modal', 'Liedbegleitung']);">Mehr erfahren</button>
         </div>
         <!-- <div class="col-md-2">
             <img class="previewIcon" src="assets/images/schwerpunkte/rock.svg">
@@ -44,7 +44,7 @@
                 <div class="panel panel-default">
                   <div class="panel-heading" role="tab" id="headingOne">
                     <h4 class="panel-title">
-                      <a role="button" data-toggle="collapse" data-parent="#accordion" href="#_collapseOne" aria-expanded="true" aria-controls="_collapseOne">
+                      <a role="button" data-toggle="collapse" data-parent="#accordion" href="#_collapseOne" aria-expanded="true" aria-controls="_collapseOne" onclick="_paq.push(['trackEvent', 'Gitarrenunterricht für Kinder', 'Klick']);">
                         <b>Gitarrenunterricht für Kinder: (Zum Öffnen klicken)</b>
                       </a>
                     </h4>
@@ -59,7 +59,7 @@
                 <div class="panel panel-default">
                   <div class="panel-heading" role="tab" id="headingTwo">
                     <h4 class="panel-title">
-                      <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#_collapseTwo" aria-expanded="false" aria-controls="_collapseTwo">
+                      <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#_collapseTwo" aria-expanded="false" aria-controls="_collapseTwo" onclick="_paq.push(['trackEvent', 'Gitarrenunterricht für Jugendliche und Erwachsene', 'Klick']);">
                         <b>Gitarrenunterricht für Jugendliche und Erwachsene: (Zum Öffnen klicken)</b>
                       </a>
                     </h4>
