--- a/_includes/kosten.html
+++ b/_includes/kosten.html
@@ -58,7 +58,7 @@
         <div class="panel panel-default">
             <div class="panel-heading" role="tab" id="headingOne">
                 <h4 class="panel-title">
-                    <a role="button" data-toggle="collapse" data-parent="#accordion" href="#_collapsePriceDetails" aria-expanded="true" aria-controls="_collapsePriceDetails">
+                    <a role="button" data-toggle="collapse" data-parent="#accordion" href="#_collapsePriceDetails" aria-expanded="true" aria-controls="_collapsePriceDetails" onclick="_paq.push(['trackEvent', 'Kosten Details', 'Klick']);">
                         <b>Details (Zum öffnen klicken)</b>
                     </a>
                 </h4>
