--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -3,14 +3,14 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
         <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close" onclick="_paq.push(['trackEvent', 'Modal', 'Schließen']);"><span aria-hidden="true">&times;</span></button>
             <h4 class="modal-title" id="label_modal_klassischeGitarre">Klassische Gitarre</h4>
         </div>
         <div class="modal-body">
             Der Begriff "klassische Gitarre" bezieht sich auf die Art des Instrumentes, seine Haltung und Spielweise sowie das Repertoire. Es können Stücke aus den Musikepochen von Renaissance bis zur Moderne erlernt werden. Notenkenntnisse sind von Vorteil aber kein Muss, da viele Stücke auch als Tabulatur (Griffschrift) angeboten werden. Auch Anfänger könnnen mit einfachen Stücken beginnen. Die Tonbildung spielt bei der Konzertgitarre und speziell beim Spiel klassischer Literatur eine große Rolle.
         </div>
         <div class="modal-footer">
-            <button type="button" class="btn btn-primary" data-dismiss="modal">schließen</button>
+            <button type="button" class="btn btn-primary" data-dismiss="modal" onclick="_paq.push(['trackEvent', 'Modal', 'Schließen']);">schließen</button>
         </div>
         </div>
     </div>
@@ -20,14 +20,14 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
         <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close" onclick="_paq.push(['trackEvent', 'Modal', 'Schließen']);"><span aria-hidden="true">&times;</span></button>
             <h4 class="modal-title" id="label_modal_fingerstyle">Fingerstyle</h4>
         </div>
         <div class="modal-body">
             Fingerstyle Spielweise kann sowohl auf einer Westerngitarre (akustisches Instrument mit Stahlsaiten) als auch auf einer Konzertgitarre umgesetzt werden. Eigentlich ist das Spiel der klassischen Gitarre auch "Fingerstyle", aber der Begriff hat sich im Zusammenhang mit dem Spiel aktueller Stilrichtungen etabliert. Häufig werden aktuelle Songs auf dem Instrument umgesetzt, indem Melodie und Begleitung in einem Arrangement verschmelzen.
         </div>
         <div class="modal-footer">
-            <button type="button" class="btn btn-primary" data-dismiss="modal">schließen</button>
+            <button type="button" class="btn btn-primary" data-dismiss="modal" onclick="_paq.push(['trackEvent', 'Modal', 'Schließen']);">schließen</button>
         </div>
         </div>
     </div>
@@ -37,7 +37,7 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
         <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close" onclick="_paq.push(['trackEvent', 'Modal', 'Schließen']);"><span aria-hidden="true">&times;</span></button>
             <h4 class="modal-title" id="label_modal_liedbegleitung">Liedbegleitung</h4>
         </div>
         <div class="modal-body">
@@ -55,7 +55,7 @@
                 Hierzu gehört u.a. die Takt- und Tonart zu bestimmen, die Begleitakkorde herauszuhören und der Melodie zuzuordnen.
         </div>
         <div class="modal-footer">
-            <button type="button" class="btn btn-primary" data-dismiss="modal">schließen</button>
+            <button type="button" class="btn btn-primary" data-dismiss="modal" onclick="_paq.push(['trackEvent', 'Modal', 'Schließen']);">schließen</button>
         </div>
         </div>
     </div>
