--- a/_includes/technik.html
+++ b/_includes/technik.html
@@ -29,8 +29,8 @@
 
 <div class="my-gallery gallery_row" itemscope itemtype="http://schema.org/ImageGallery">
     <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-        <a href="./assets/images/technik/Cubase_für_Gitarrenunterricht_m.jpg" itemprop="contentUrl" data-size="1438x959">
-            <img src="./assets/images/technik/Cubase_für_Gitarrenunterricht.jpg" itemprop="thumbnail" alt="Cubase Logo" />
+        <a href="./assets/images/technik/Cubase_fuer_Gitarrenunterricht_m.jpg" itemprop="contentUrl" data-size="1438x959">
+            <img src="./assets/images/technik/Cubase_fuer_Gitarrenunterricht.jpg" itemprop="thumbnail" alt="Cubase Logo" />
         </a>
         <figcaption itemprop="caption description">Für Aufnahmen steht das Sequenzerprogramm Cubase mit diversen Plugins zur Verfügung.</figcaption>
     </figure>
