--- a/_includes/gitarrenunterricht.html
+++ b/_includes/gitarrenunterricht.html
@@ -7,17 +7,17 @@
 <div>
     <div class="row center-text unterricht-schwerpunkte">
         <div class="col-md-4">
-            <img class="previewIcon" src="assets/images/schwerpunkte/spanish-guitar.svg">
+            <img class="previewIcon" src="assets\images\schwerpunkte\Gitarrenunterricht_klassische_Gitarre.svg">
             <div><h3>Klassische Gitarre</h3></div>
             <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modal_klassischeGitarre" onclick="_paq.push(['trackEvent', 'Modal', 'Klassische Gitarre']);">Mehr erfahren</button>
         </div>
         <div class="col-md-4">
-            <img class="previewIcon" src="assets/images/schwerpunkte/hand.svg">
+            <img class="previewIcon" src="assets\images\schwerpunkte\Gitarrenunterricht_Fingerstyle_Gitarre.svg">
             <div><h3>Fingerstyle</h3></div>
             <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modal_fingerstyle" onclick="_paq.push(['trackEvent', 'Modal', 'Fingerstyle']);">Mehr erfahren</button>
         </div>
         <div class="col-md-4">
-            <img class="previewIcon" src="assets/images/schwerpunkte/song.svg">
+            <img class="previewIcon" src="assets\images\schwerpunkte\Gitarrenunterricht_Liedbegleitung.svg">
             <div><h3>Liedbegleitung</h3></div>
             <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modal_liedbegleitung" onclick="_paq.push(['trackEvent', 'Modal', 'Liedbegleitung']);">Mehr erfahren</button>
         </div>
@@ -71,8 +71,8 @@
         <div class="col-md-6">       
             <div class="my-gallery" itemscope itemtype="http://schema.org/ImageGallery">
                 <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-                    <a href="./assets/images/unterricht/spielen_m.jpg" itemprop="contentUrl" data-size="1920x1187">
-                        <img src="./assets/images/unterricht/spielen.jpg" itemprop="thumbnail" alt="Bernhard Welling gibt Gitarrenunterricht" />
+                    <a href="./assets\images\unterricht\Gitarrenlehrer_spielt_Gitarre_im_Gitarrenunterricht_m.jpg" itemprop="contentUrl" data-size="1920x1187">
+                        <img src="./assets\images\unterricht\Gitarrenlehrer_spielt_Gitarre_im_Gitarrenunterricht.jpg" itemprop="thumbnail" alt="Bernhard Welling gibt Gitarrenunterricht" />
                     </a>
                 </figure>
             </div>
