--- a/_includes/location.html
+++ b/_includes/location.html
@@ -14,8 +14,8 @@
         <div class="col-md-6">
             <div class="my-gallery" itemscope itemtype="http://schema.org/ImageGallery">
                 <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-                    <a href="./assets/images/location/haus_aussen_m.jpg" itemprop="contentUrl" data-size="1400x1965">
-                        <img src="./assets/images/location/haus_aussen.jpg" itemprop="thumbnail" alt="Außenansicht der Unterrichtsräume von Gitarrenlehrer Bernhard Welling in Eimsbüttel nahe der Osterstraße" />
+                    <a href="./assets/images/location/Haus_Gitarrenunterricht_in_Eimsbuettel_m.jpg" itemprop="contentUrl" data-size="1400x1965">
+                        <img src="./assets/images/location/Haus_Gitarrenunterricht_in_Eimsbuettel.jpg" itemprop="thumbnail" alt="Außenansicht der Unterrichtsräume von Gitarrenlehrer Bernhard Welling in Eimsbüttel nahe der Osterstraße" />
                     </a>
                 </figure>
             </div>
@@ -29,8 +29,8 @@
         <div class="col-md-6">
             <div class="my-gallery" itemscope itemtype="http://schema.org/ImageGallery">
                 <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-                    <a href="./assets/images/gallery_main/MG_4179_m.jpg" itemprop="contentUrl" data-size="1920x1280">
-                        <img src="./assets/images/gallery_main/3.jpg" itemprop="thumbnail" alt="Einblick in die Unterrichtsräume und das schalldichte Tonstudio von Gitarrenlehrer Bernhard Welling in Eimsbüttel" />
+                    <a href="./assets\images\gallery_main\Studio_Gitarrenunterricht_Gitarrenlehrer_m.jpg" itemprop="contentUrl" data-size="1920x1280">
+                        <img src="./assets\images\gallery_main\Studio_Gitarrenunterricht_Gitarrenlehrer.jpg" itemprop="thumbnail" alt="Einblick in die Unterrichtsräume und das schalldichte Tonstudio von Gitarrenlehrer Bernhard Welling in Eimsbüttel" />
                     </a>
                 </figure>
             </div>
