--- a/_includes/technik.html
+++ b/_includes/technik.html
@@ -15,8 +15,8 @@
         <div class="col-md-6">
             <div class="my-gallery" itemscope itemtype="http://schema.org/ImageGallery">
                 <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-                    <a href="./assets/images/technik/technik_m.jpg" itemprop="contentUrl" data-size="1920x1280">
-                        <img src="./assets/images/technik/technik.jpg" itemprop="thumbnail" alt="Professionelles technisches Equipment bei Gitarrenlehrer Bernhard Welling in Eimsbüttel" />
+                    <a href="./assets\images\technik\Gitarrenunterricht_Technik_m.jpg" itemprop="contentUrl" data-size="1920x1280">
+                        <img src="./assets\images\technik\Gitarrenunterricht_Technik.jpg" itemprop="thumbnail" alt="Professionelles technisches Equipment bei Gitarrenlehrer Bernhard Welling in Eimsbüttel" />
                     </a>
                 </figure>
             </div>
@@ -36,22 +36,22 @@
     </figure>
 
     <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-        <a href="./assets/images/technik/MG_4199_m.jpg" itemprop="contentUrl" data-size="1920x1280">
-            <img src="./assets/images/technik/2.jpg" itemprop="thumbnail" alt="12 Kanal Mixer Signalansteuerung" />
+        <a href="./assets\images\technik\Gitarrenunterricht_Mixer__m.jpg" itemprop="contentUrl" data-size="1920x1280">
+            <img src="./assets\images\technik\Gitarrenunterricht_Mixer.jpg" itemprop="thumbnail" alt="12 Kanal Mixer Signalansteuerung" />
         </a>
         <figcaption itemprop="caption description">Ein 12 Kanal Mixer sorgt für die richtige Signalansteuerung.</figcaption>
     </figure>
 
     <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-        <a href="./assets/images/technik/MG_4205_m.jpg" itemprop="contentUrl" data-size="1920x1280">
-            <img src="./assets/images/technik/3.jpg" itemprop="thumbnail" alt="Membranmikrofon in Nahaufnahme" />
+        <a href="./assets\images\technik\Gitarrenunterricht_Mikrofonaufnahmen_m.jpg" itemprop="contentUrl" data-size="1920x1280">
+            <img src="./assets\images\technik\Gitarrenunterricht_Mikrofonaufnahmen.jpg" itemprop="thumbnail" alt="Membranmikrofon in Nahaufnahme" />
         </a>
         <figcaption itemprop="caption description">Diverse Groß- und Kleinmembranmikrofone sind zum Abnehmen des Gitarrensounds oder der Gesangsstimme bereit.</figcaption>
     </figure>
 
     <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-        <a href="./assets/images/technik/MG_4209_m.jpg" itemprop="contentUrl" data-size="1000x1500">
-            <img src="./assets/images/technik/4.jpg" itemprop="thumbnail" alt="Ein E-Piano zum Einspielen von Midi-Noten" />
+        <a href="./assets\images\technik\Gitarrenunterricht_E-Piano_m.jpg" itemprop="contentUrl" data-size="1000x1500">
+            <img src="./assets\images\technik\Gitarrenunterricht_E-Piano.jpg" itemprop="thumbnail" alt="Ein E-Piano zum Einspielen von Midi-Noten" />
         </a>
         <figcaption itemprop="caption description">Ein E-Piano zum Einspielen von Midi-Noten, zum Erklären der Musiktheorie oder einfach zum Bespielen ist vorhanden.</figcaption>
     </figure>
