--- a/_includes/kontakt.html
+++ b/_includes/kontakt.html
@@ -11,17 +11,17 @@
     <div class="icon-row-container contact_options">
       <div class="row margin-top-elements-in-row ">
           <div class="col-md-4">
-            <img class="previewIcon" src="assets/images/kontakt_phone.svg">
+            <img class="previewIcon" src="assets\images\Gitarrenlehrer_Kontakt_Telefon.svg">
               <h3>Rufen Sie gerne an ...</h3>
               <div class="tag_tel"></div>
           </div>
           <div class="col-md-4">
-            <img class="previewIcon" src="assets/images/kontakt_mail.svg">
+            <img class="previewIcon" src="assets\images\Gitarrenlehrer_Kontakt_E-Mail.svg">
             <h3>... schreiben Sie eine Email ...</h3>
             <div class="tag_mailto"></div>
           </div>
           <div class="col-md-4">
-              <img class="previewIcon" alt="contact" src="assets/images/kontakt_map.svg">
+              <img class="previewIcon" alt="contact" src="assets\images\Gitarrenlehrer_Kontakt_Besuch.svg">
               <h3>... oder kommen Sie vorbei</h3>
               <p>
                   Bernhard Welling<br>
