--- a/_includes/kosten.html
+++ b/_includes/kosten.html
@@ -7,15 +7,15 @@
 <div class="icon-row-container">
     <div class="row margin-top-elements-in-row ">
         <div class="col-md-4">
-            <img class="previewIcon" src="assets/images/kosten_probezeit.svg">
+            <img class="previewIcon" src="assets\images\Gitarrenlehrer_Kennenlerntermin.svg">
             <h3>Unverbindlicher Kennenlerntermin</h3>
         </div>
         <div class="col-md-4">
-            <img class="previewIcon" src="assets/images/kosten_ferien.svg">
+            <img class="previewIcon" src="assets\images\Gitarrenlehrer_Probezeit.svg">
             <h3>4- bis 6-wöchige Probephase</h3>
         </div>
         <div class="col-md-4">
-            <img class="previewIcon" src="assets/images/kosten_bindung.svg">
+            <img class="previewIcon" src="assets\images\Gitarrenlehrer_Vertragslaufzeit.svg">
             <h3>Keine Mindestvertragslaufzeit</h3>
         </div>
     </div>
