Alt Tags geändert, Keywords geändert

--- a/_includes/gitarrenunterricht.html
+++ b/_includes/gitarrenunterricht.html
@@ -72,7 +72,7 @@
             <div class="my-gallery" itemscope itemtype="http://schema.org/ImageGallery">
                 <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
                     <a href="./assets\images\unterricht\gitarrenlehrer-spielt-gitarre-im-gitarrenunterricht_m.jpg" itemprop="contentUrl" data-size="1920x1187">
-                        <img src="./assets\images\unterricht\gitarrenlehrer-spielt-gitarre-im-gitarrenunterricht.jpg" itemprop="thumbnail" alt="Bernhard Welling gibt Gitarrenunterricht" />
+                        <img src="./assets\images\unterricht\gitarrenlehrer-spielt-gitarre-im-gitarrenunterricht.jpg" itemprop="thumbnail" alt="Gitarrenlehrer Bernhard Welling gibt Gitarrenunterricht" />
                     </a>
                 </figure>
             </div>
