--- a/_includes/person.html
+++ b/_includes/person.html
@@ -76,7 +76,7 @@
             <div class="my-gallery" itemscope itemtype="http://schema.org/ImageGallery">
                 <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
                     <a href="./assets\images\person\gitarrenlehrer-gitarrenunterricht-foto-m.jpg" itemprop="contentUrl" data-size="1400x2104">
-                        <img src="./assets\images\person\gitarrenlehrer-gitarrenunterricht-foto.jpg" itemprop="thumbnail" alt="Portraitfoto von Gitarrenlehrer Bernhard Welling vor seinen Unterrichtsräumen in Hamburg Eimsbüttel" />
+                        <img src="./assets\images\person\gitarrenlehrer-gitarrenunterricht-foto.jpg" itemprop="thumbnail" alt="Portraitfoto von Gitarrenlehrer Bernhard Welling vor seinen Unterrichtsräumen für Gitarrenunterricht in Hamburg Eimsbüttel" />
                     </a>
                 </figure>
             </div>
