--- a/_includes/location.html
+++ b/_includes/location.html
@@ -15,7 +15,7 @@
             <div class="my-gallery" itemscope itemtype="http://schema.org/ImageGallery">
                 <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
                     <a href="./assets/images/location/haus-gitarrenunterricht-in-eimsbuettel-m.jpg" itemprop="contentUrl" data-size="1400x1965">
-                        <img src="./assets/images/location/haus-gitarrenunterricht-in-eimsbuettel.jpg" itemprop="thumbnail" alt="Außenansicht der Unterrichtsräume von Gitarrenlehrer Bernhard Welling in Eimsbüttel nahe der Osterstraße" />
+                        <img src="./assets/images/location/haus-gitarrenunterricht-in-eimsbuettel.jpg" itemprop="thumbnail" alt="Außenansicht der Unterrichtsräume von Gitarrenlehrer Bernhard Welling in Hamburg Eimsbüttel nahe der Osterstraße" />
                     </a>
                 </figure>
             </div>
@@ -30,7 +30,7 @@
             <div class="my-gallery" itemscope itemtype="http://schema.org/ImageGallery">
                 <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
                     <a href="./assets\images\gallery_main\studio-gitarrenunterricht-gitarrenlehrer-m.jpg" itemprop="contentUrl" data-size="1920x1280">
-                        <img src="./assets\images\gallery_main\studio-gitarrenunterricht-gitarrenlehrer.jpg" itemprop="thumbnail" alt="Einblick in die Unterrichtsräume und das schalldichte Tonstudio von Gitarrenlehrer Bernhard Welling in Eimsbüttel" />
+                        <img src="./assets\images\gallery_main\studio-gitarrenunterricht-gitarrenlehrer.jpg" itemprop="thumbnail" alt="Einblick in die Unterrichtsräume und das schalldichte Tonstudio von Gitarrenlehrer Bernhard Welling in Hamburg Eimsbüttel" />
                     </a>
                 </figure>
             </div>
