--- a/_includes/technik.html
+++ b/_includes/technik.html
@@ -16,7 +16,7 @@
             <div class="my-gallery" itemscope itemtype="http://schema.org/ImageGallery">
                 <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
                     <a href="./assets\images\technik\gitarrenunterricht-technik-m.jpg" itemprop="contentUrl" data-size="1920x1280">
-                        <img src="./assets\images\technik\gitarrenunterricht-technik.jpg" itemprop="thumbnail" alt="Professionelles technisches Equipment bei Gitarrenlehrer Bernhard Welling in Eimsbüttel" />
+                        <img src="./assets\images\technik\gitarrenunterricht-technik.jpg" itemprop="thumbnail" alt="Professionelles technisches Equipment bei Gitarrenlehrer Bernhard Welling in Hamburg Eimsbüttel" />
                     </a>
                 </figure>
             </div>
@@ -30,28 +30,28 @@
 <div class="my-gallery gallery_row" itemscope itemtype="http://schema.org/ImageGallery">
     <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
         <a href="./assets/images/technik/cubase-fuer-gitarrenunterricht-m.jpg" itemprop="contentUrl" data-size="1438x959">
-            <img src="./assets/images/technik/cubase-fuer-gitarrenunterricht.jpg" itemprop="thumbnail" alt="Cubase Logo" />
+            <img src="./assets/images/technik/cubase-fuer-gitarrenunterricht.jpg" itemprop="thumbnail" alt="Sequenzerprogramm Cubase  für Aufnahmen im Gitarrenunterricht" />
         </a>
         <figcaption itemprop="caption description">Für Aufnahmen steht das Sequenzerprogramm Cubase mit diversen Plugins zur Verfügung.</figcaption>
     </figure>
 
     <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
         <a href="./assets\images\technik\gitarrenunterricht-mixer-m.jpg" itemprop="contentUrl" data-size="1920x1280">
-            <img src="./assets\images\technik\gitarrenunterricht-mixer.jpg" itemprop="thumbnail" alt="12 Kanal Mixer Signalansteuerung" />
+            <img src="./assets\images\technik\gitarrenunterricht-mixer.jpg" itemprop="thumbnail" alt="12 Kanal Mixer für Aufnahmen im Gitarrenunterricht" />
         </a>
         <figcaption itemprop="caption description">Ein 12 Kanal Mixer sorgt für die richtige Signalansteuerung.</figcaption>
     </figure>
 
     <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
         <a href="./assets\images\technik\gitarrenunterricht-mikrofonaufnahmen-m.jpg" itemprop="contentUrl" data-size="1920x1280">
-            <img src="./assets\images\technik\gitarrenunterricht-mikrofonaufnahmen.jpg" itemprop="thumbnail" alt="Membranmikrofon in Nahaufnahme" />
+            <img src="./assets\images\technik\gitarrenunterricht-mikrofonaufnahmen.jpg" itemprop="thumbnail" alt="Mikrofon für Aufnahmen im Gitarrenunterricht" />
         </a>
         <figcaption itemprop="caption description">Diverse Groß- und Kleinmembranmikrofone sind zum Abnehmen des Gitarrensounds oder der Gesangsstimme bereit.</figcaption>
     </figure>
 
     <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
         <a href="./assets\images\technik\gitarrenunterricht-e-piano-m.jpg" itemprop="contentUrl" data-size="1000x1500">
-            <img src="./assets\images\technik\gitarrenunterricht-e-piano.jpg" itemprop="thumbnail" alt="Ein E-Piano zum Einspielen von Midi-Noten" />
+            <img src="./assets\images\technik\gitarrenunterricht-e-piano.jpg" itemprop="thumbnail" alt="Ein E-Piano für Aufnahmen im Gitarrenunterricht" />
         </a>
         <figcaption itemprop="caption description">Ein E-Piano zum Einspielen von Midi-Noten, zum Erklären der Musiktheorie oder einfach zum Bespielen ist vorhanden.</figcaption>
     </figure>
