Backslash in  Slash

--- a/_includes/kontakt.html
+++ b/_includes/kontakt.html
@@ -11,17 +11,17 @@
     <div class="icon-row-container contact_options">
       <div class="row margin-top-elements-in-row ">
           <div class="col-md-4">
-            <img class="previewIcon" src="assets\images\gitarrenlehrer-kontakt-telefon.svg">
+            <img class="previewIcon" src="assets/images/gitarrenlehrer-kontakt-telefon.svg">
               <h3>Rufen Sie gerne an ...</h3>
               <div class="tag_tel"></div>
           </div>
           <div class="col-md-4">
-            <img class="previewIcon" src="assets\images\gitarrenlehrer-kontakt-e-mail.svg">
+            <img class="previewIcon" src="assets/images/gitarrenlehrer-kontakt-e-mail.svg">
             <h3>... schreiben Sie eine Email ...</h3>
             <div class="tag_mailto"></div>
           </div>
           <div class="col-md-4">
-              <img class="previewIcon" alt="contact" src="assets\images\gitarrenlehrer-kontakt-besuch.svg">
+              <img class="previewIcon" alt="contact" src="assets/images/gitarrenlehrer-kontakt-besuch.svg">
               <h3>... oder kommen Sie vorbei</h3>
               <p>
                   Bernhard Welling<br>
