--- a/_includes/technik.html
+++ b/_includes/technik.html
@@ -36,22 +36,22 @@
     </figure>
 
     <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-        <a href="./assets\images\technik\gitarrenunterricht-mixer-m.jpg" itemprop="contentUrl" data-size="1920x1280">
-            <img src="./assets\images\technik\gitarrenunterricht-mixer.jpg" itemprop="thumbnail" alt="12 Kanal Mixer für Aufnahmen im Gitarrenunterricht" />
+        <a href="./assets/images/technik/gitarrenunterricht-mixer-m.jpg" itemprop="contentUrl" data-size="1920x1280">
+            <img src="./assets/images/technik/gitarrenunterricht-mixer.jpg" itemprop="thumbnail" alt="12 Kanal Mixer für Aufnahmen im Gitarrenunterricht" />
         </a>
         <figcaption itemprop="caption description">Ein 12 Kanal Mixer sorgt für die richtige Signalansteuerung.</figcaption>
     </figure>
 
     <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-        <a href="./assets\images\technik\gitarrenunterricht-mikrofonaufnahmen-m.jpg" itemprop="contentUrl" data-size="1920x1280">
-            <img src="./assets\images\technik\gitarrenunterricht-mikrofonaufnahmen.jpg" itemprop="thumbnail" alt="Mikrofon für Aufnahmen im Gitarrenunterricht" />
+        <a href="./assets/images/technik/gitarrenunterricht-mikrofonaufnahmen-m.jpg" itemprop="contentUrl" data-size="1920x1280">
+            <img src="./assets/images/technik/gitarrenunterricht-mikrofonaufnahmen.jpg" itemprop="thumbnail" alt="Mikrofon für Aufnahmen im Gitarrenunterricht" />
         </a>
         <figcaption itemprop="caption description">Diverse Groß- und Kleinmembranmikrofone sind zum Abnehmen des Gitarrensounds oder der Gesangsstimme bereit.</figcaption>
     </figure>
 
     <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-        <a href="./assets\images\technik\gitarrenunterricht-e-piano-m.jpg" itemprop="contentUrl" data-size="1000x1500">
-            <img src="./assets\images\technik\gitarrenunterricht-e-piano.jpg" itemprop="thumbnail" alt="Ein E-Piano für Aufnahmen im Gitarrenunterricht" />
+        <a href="./assets/images/technik/gitarrenunterricht-e-piano-m.jpg" itemprop="contentUrl" data-size="1000x1500">
+            <img src="./assets/images/technik/gitarrenunterricht-e-piano.jpg" itemprop="thumbnail" alt="Ein E-Piano für Aufnahmen im Gitarrenunterricht" />
         </a>
         <figcaption itemprop="caption description">Ein E-Piano zum Einspielen von Midi-Noten, zum Erklären der Musiktheorie oder einfach zum Bespielen ist vorhanden.</figcaption>
     </figure>
