Backslash zu Slash

--- a/_includes/technik.html
+++ b/_includes/technik.html
@@ -15,8 +15,8 @@
         <div class="col-md-6">
             <div class="my-gallery" itemscope itemtype="http://schema.org/ImageGallery">
                 <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-                    <a href="./assets\images\technik\gitarrenunterricht-technik-m.jpg" itemprop="contentUrl" data-size="1920x1280">
-                        <img src="./assets\images\technik\gitarrenunterricht-technik.jpg" itemprop="thumbnail" alt="Professionelles technisches Equipment bei Gitarrenlehrer Bernhard Welling in Hamburg Eimsbüttel" />
+                    <a href="./assets/images/technik/gitarrenunterricht-technik-m.jpg" itemprop="contentUrl" data-size="1920x1280">
+                        <img src="./assets/images/technik/gitarrenunterricht-technik.jpg" itemprop="thumbnail" alt="Professionelles technisches Equipment bei Gitarrenlehrer Bernhard Welling in Hamburg Eimsbüttel" />
                     </a>
                 </figure>
             </div>
