alt Text für Icons

--- a/_includes/gitarrenunterricht.html
+++ b/_includes/gitarrenunterricht.html
@@ -7,17 +7,17 @@
 <div>
     <div class="row center-text unterricht-schwerpunkte">
         <div class="col-md-4">
-            <img class="previewIcon" src="assets/images/schwerpunkte/gitarrenunterricht-klassische-gitarre.svg">
+            <img class="previewIcon" src="assets/images/schwerpunkte/gitarrenunterricht-klassische-gitarre.svg" alt="Vorschau-Icon für klassische Gitarre">
             <div><h3>Klassische Gitarre</h3></div>
             <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modal_klassischeGitarre" onclick="_paq.push(['trackEvent', 'Modal', 'Klassische Gitarre']);">Mehr erfahren</button>
         </div>
         <div class="col-md-4">
-            <img class="previewIcon" src="assets/images/schwerpunkte/gitarrenunterricht-fingerstyle-gitarre.svg">
+            <img class="previewIcon" src="assets/images/schwerpunkte/gitarrenunterricht-fingerstyle-gitarre.svg" alt="Vorschau-Icon für Fingerstyle-Gitarre">
             <div><h3>Fingerstyle</h3></div>
             <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modal_fingerstyle" onclick="_paq.push(['trackEvent', 'Modal', 'Fingerstyle']);">Mehr erfahren</button>
         </div>
         <div class="col-md-4">
-            <img class="previewIcon" src="assets/images/schwerpunkte/gitarrenunterricht-liedbegleitung.svg">
+            <img class="previewIcon" src="assets/images/schwerpunkte/gitarrenunterricht-liedbegleitung.svg" alt="Vorschau-Icon für die Gitarre in der Liedbegleitung">
             <div><h3>Liedbegleitung</h3></div>
             <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modal_liedbegleitung" onclick="_paq.push(['trackEvent', 'Modal', 'Liedbegleitung']);">Mehr erfahren</button>
         </div>
