--- a/_includes/location.html
+++ b/_includes/location.html
@@ -29,7 +29,7 @@
         <div class="col-md-6">
             <div class="my-gallery" itemscope itemtype="http://schema.org/ImageGallery">
                 <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-                    <a href="./assets/images/gallery_main\studio-gitarrenunterricht-gitarrenlehrer-m.jpg" itemprop="contentUrl" data-size="1920x1280">
+                    <a href="./assets/images/gallery_main/studio-gitarrenunterricht-gitarrenlehrer-m.jpg" itemprop="contentUrl" data-size="1920x1280">
                         <img src="./assets/images/gallery_main/studio-gitarrenunterricht-gitarrenlehrer.jpg" itemprop="thumbnail" alt="Einblick in die Unterrichtsräume und das schalldichte Tonstudio von Gitarrenlehrer Bernhard Welling in Hamburg Eimsbüttel" />
                     </a>
                 </figure>
