--- a/_includes/kosten.html
+++ b/_includes/kosten.html
@@ -7,15 +7,15 @@
 <div class="icon-row-container">
     <div class="row margin-top-elements-in-row ">
         <div class="col-md-4">
-            <img class="previewIcon" src="assets/images/gitarrenlehrer-kennenlerntermin.svg">
+            <img class="previewIcon" src="assets/images/gitarrenlehrer-kennenlerntermin.svg" alt="icon-gitarrenlehrer-kennenlerntermin">
             <h3>Unverbindlicher Kennenlerntermin</h3>
         </div>
         <div class="col-md-4">
-            <img class="previewIcon" src="assets/images/gitarrenlehrer-probezeit.svg">
+            <img class="previewIcon" src="assets/images/gitarrenlehrer-probezeit.svg" alt="icon-gitarrenlehrer-probezeit">
             <h3>4- bis 6-wöchige Probephase</h3>
         </div>
         <div class="col-md-4">
-            <img class="previewIcon" src="assets/images/gitarrenlehrer-vertragslaufzeit.svg">
+            <img class="previewIcon" src="assets/images/gitarrenlehrer-vertragslaufzeit.svg" alt="icon-gitarrenlehrer-vertragslaufzeit">
             <h3>Keine Mindestvertragslaufzeit</h3>
         </div>
     </div>
