--- a/_includes/kontakt.html
+++ b/_includes/kontakt.html
@@ -21,7 +21,7 @@
             <div class="tag_mailto"></div>
           </div>
           <div class="col-md-4">
-              <img class="previewIcon" alt="contact" src="assets/images/gitarrenlehrer-kontakt-besuch.svg" alt="icon-gitarrenlehrer-kontakt-besuch">
+              <img class="previewIcon" src="assets/images/gitarrenlehrer-kontakt-besuch.svg" alt="icon-gitarrenlehrer-kontakt-besuch">
               <h3>... oder kommen Sie vorbei</h3>
               <p>
                   Bernhard Welling<br>
