--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -63,5 +63,5 @@
 
 <div id="covid_info" class="alert alert-dismissible" role="alert">
     <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-    <strong>Info zur aktuellen Situation wegen COVID-19:</strong> Zur Zeit findet im Studio kein Unterricht statt. Es wird stattdessen Online-Unterricht angeboten. Fragen Sie nach!
+    <strong>Info zur aktuellen Situation wegen COVID-19:</strong> Zurzeit findet im Studio kein Unterricht statt. Es wird stattdessen Online-Unterricht angeboten. Fragen Sie nach!
 </div>
